<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_300"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:background="@mipmap/ic_login_top_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo_image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="-60dp"
        android:background="@drawable/shape_login_container"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_mobile"
                android:textColor="@color/text_33"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_input"
                android:orientation="horizontal"
                android:paddingTop="24dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91"
                    android:textColor="@color/text_33"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_enter"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="22dp"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_OPT"
                android:textColor="@color/text_33"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_input"
                android:orientation="horizontal"
                android:paddingTop="24dp"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_enter"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_otp"
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/login_OPT_get"
                    android:textColor="@color/text_primary"
                    android:textSize="15sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvGetVoiceCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/login_voice_get"
                    android:textColor="@color/text_99"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/shape_theme"
                android:gravity="center"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivCheckPolicy"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/ic_unselected" />

                <TextView
                    android:id="@+id/tvPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/login_privacy"
                    android:textColor="@color/text_99"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>







</LinearLayout>